# luhorm

./: .#README.md  .gitignore  Cargo.toml  README.md
migr/: 0001_first_test.sql  0002_second_test.sql
old/: bestyet.rs  last.rs  new.rs  newnew.rs  old.rs
postgres_migr/: 0001_first_test.sql  0002_second_test.sql
src/: impls.rs  lib.rs
